<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">thenewboston</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="thenewboston">Thenewboston</string>
    <string name="title_activity_registration">Create an Account</string>
    <string name="label_first_name">First Name:</string>
    <string name="label_last_name">Last Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_password">Password:</string>
    <string name="label_confirm_password">Confirm Password:</string>
    <string name="register">Register</string>
    <string name="have_an_account_signin_here">Have an Account? Sign in Here</string>
    <string name="enter_email">Please enter your e-mail.</string>
    <string name="enter_password">Please enter your password.</string>
    <string name="enter_valid_email">Please enter a valid e-mail.</string>
    <string name="complete_fields_in_red">Please complete the fields in red.</string>
    <string name="passwords_not_match">Passwords do not match.</string>
    <string name="title_activity_youtube_video">YoutubeVideo</string>
    <string name="title_activity_create_post">Create a New Post</string>
    <string name="title_activity_comment">Comments</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_friend_choose">Select Friend</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_profile_photo">Photo</string>

    <!-- Youtube -->
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string-array name="post_visibilities">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string-array name="months">
        <item>-</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="days">
        <item>-</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="years">
        <item>1980</item>
        <item>1981</item>
    </string-array>

    <string-array name="examples">
        <item>Example 1</item>
        <item>Example 2</item>
    </string-array>

    <string name="title_activity_stream">StreamActivity</string>
    <string name="title_activity_friend_request">FriendRequestActivity</string>
    <string name="title_activity_messages_inbox">MessagesInboxActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_messages_sent">MessagesSentActivity</string>
    <string name="title_activity_messages_trash">MessagesTrashActivity</string>
    <string name="title_activity_info_basic">Basic Information</string>
    <string name="title_activity_info_contact">Contact Information</string>
    <string name="title_activity_info_education">Education</string>
    <string name="title_activity_info_employment">Employment</string>
    <string name="title_activity_info_links">Links</string>
    <string name="title_activity_message_read">MessageReadActivity</string>
    <string name="title_activity_message_compose">MessageComposeActivity</string>
    <string name="title_activity_messages_read">MessagesReadActivity</string>
    <string name="title_activity_messages_compose">MessagesComposeActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_delete_account">DeleteAccountActivity</string>


    <string-array name="gender">
        <item>--</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="relationship_status">
        <item>--</item>
        <item>Single</item>
        <item>In a Relationship</item>
    </string-array>
</resources>