<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Main content -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6"
        tools:context="com.thenewboston.LoginActivity">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/app_bar">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/label_email"
                    style="@style/label_small"
                    android:text="@string/label_email" />

                <EditText
                    android:id="@+id/input_email"
                    style="@style/input_normal"
                    android:autoText="false"
                    android:inputType="textEmailAddress"
                    android:text="" />

                <TextView
                    android:id="@+id/label_password"
                    style="@style/label_small"
                    android:text="@string/label_password" />

                <EditText
                    android:id="@+id/input_password"
                    style="@style/input_normal"
                    android:autoText="false"
                    android:inputType="textPassword"
                    android:text="" />

                <Button
                    android:id="@+id/button_signin"
                    style="@style/button_form"
                    android:onClick="doLogin"
                    android:text="@string/sign_in" />

                <Button
                    android:id="@+id/button_signup"
                    style="@style/button_form"
                    android:background="#16A085"
                    android:onClick="gotoRegistrationActivity"
                    android:text="@string/create_an_account" />


            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/progress_overlay"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#80000000"
            android:clickable="false"
            android:onClick="overlayClick"
            android:transitionGroup="false"
            android:visibility="invisible">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:indeterminate="false" />
        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
